--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     outline: none;
     text-decoration: none;
     color: rgb(247, 247, 250);
-    margin-left: 30%;
+    /* margin-left: 5%; */
 }
 
 .nav-text:hover {
@@ -35,7 +35,7 @@ body {
 }
 
 .aldreomsorg {
-    margin-top: 50%;
+    margin-top: 30%;
     outline: none;
     text-decoration: none;
     color: rgb(0, 128, 73);
@@ -46,7 +46,7 @@ body {
 }
 
 .p-tag {
-    margin-top: 50%;
+    margin-top: 30%;
 }
 
 .btn-outline-primary {
@@ -59,7 +59,7 @@ body {
 
 .trettio {
     
-    margin-top: 30%;
+    margin-top: 7%;
     width: 40%;
 }
 
@@ -67,8 +67,31 @@ body {
     outline: none;
     text-decoration: none;
     color: rgb(0, 128, 73);
+    padding-bottom: 5%;
 }
 
 .rullstol:hover {
     color: #fff;
+}
+
+.carousel-item {
+    font-family: 'Pacifico', cursive;
+    margin-top: 23%;
+    width: 100%;
+    height: 100%;
+    color: rgb(230, 31, 210);
+    
+}
+
+#carouselExampleControls {
+    margin-top: 10%;
+    margin-left: 20%;
+    width: 60%;
+    height: 60%;
+}
+
+.bt-citat {
+    display: block;
+    margin-left: 30%;
+    margin-bottom: 5%;
 }
